# SOC-triage-meta

./: .env.example  .gitignore  Dockerfile  ENVIRONMENT_INSTRUCTIONS.md  README.md  baseline.py  friend_log_utf8.txt  inference.py  inference_output.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_score_clamp.py  test_validator_sim.py  uv_error.txt
server/: __init__.py  app.py  environment.py
server/data/: alerts.json  investigations.json
server/tasks/: __init__.py  task1_classification.py  task2_investigation.py  task3_response.py
server/tests/: test_tasks.py
