[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soc-alert-triage"
version = "1.0.0"
description = "SOC Alert Triage OpenEnv environment for Meta x HF hackathon"
requires-python = ">=3.10, <3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.36.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
